Simplify java imports